--- a/order-client/src/index.css
+++ b/order-client/src/index.css
@@ -14,5 +14,40 @@ code {
 
 
 .selected{
-  color: red
+  color: darkblue
+}
+
+.cart-label{
+  height: 50px;
+}
+
+.top-cnt{
+  height: 600px
+}
+
+.link-button {
+  background: none!important;
+  border: none;
+  padding: 0!important;
+  /*optional*/
+  font-family: arial, sans-serif;
+  /*input has OS specific font-family*/
+  color: rgb(17, 24, 27);
+  cursor: pointer;
+  
+}
+
+.link-button:hover{
+  text-decoration: underline;
+}
+
+
+.email-form{
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 100px;
+  border-top: 5px solid rgb(236, 229, 201);
+  padding: 10px;
+  background-color: rgba(255,255,255,1);
 }
